# mongado

./: .env.example  .gitignore  API_ARCHITECTURE_AUDIT.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OLLAMA_OPTIMIZATIONS.md  OLLAMA_PERFORMANCE_FIX.md  PRODUCTION_TEST_PLAN.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  manage.py  requirements.txt  setup-1password.sh  setup-hooks.sh  setup_backups.sh
backend/: .bandit  .dockerignore  .env.example  .env.production.example  DOCS_AUDIT_REPORT.md  Dockerfile  Makefile  README.md  TODO_NEXT_SESSION.md  article_loader.py  auth.py  config.py  database.py  db_schema.sql  dependencies.py  domain_types.py  embedding_sync.py  feature_flags.py  image_optimizer.py  llm_client.py  logging_config.py  main.py  neo4j_adapter.py  note_id_generator.py  notes_api.py  notes_service.py  ollama_client.py  pyproject.toml  rate_limiter.py  repair_note_links.py  requirements-base.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt.backup  seed_data.py  test_zettelkasten.py  types.py  utils.py  wikilink_parser.py
backend/adapters/: __init__.py  article_loader.py  ephemeral_notes.py  neo4j.py  template_loader.py
backend/core/: ai.py  chunking.py  inspire.py  markdown_renderer.py  notes.py  search.py
backend/data/wordlists/: adjectives.txt  nouns.txt
backend/docs/: ARTICLE_IDEAS.md
backend/models/: __init__.py  admin.py  ai.py  note.py  resource.py  search.py
backend/routers/: admin.py  ai.py  articles.py  inspire.py  notes.py  search.py  templates.py
backend/scripts/: backup_neo4j.sh  backup_neo4j_prod.sh  benchmark.py  cleanup_broken_notes.py  cleanup_ghost_notes_v2.py  generate_zettelkasten_corpus.py  normalize_note_tags.py  profile.py  restore_neo4j.sh  restore_neo4j_prod.sh  seed_from_production.py  seed_test_notes.py
backend/static/articles/: 001-44-em-lessons.md  001-saas-billing-models.md  002-mastering-programming.md  002-usage-based-billing.md  003-engineering-management-1on1s.md  003-how-complex-sytems-fail.md  004-sre-golden-signals.md  004-weekly-department-update.md  005-on-call-rotation.md  005-software-delivery-perf-framework.md  (+21 more)
backend/tests/: __init__.py  conftest.py
(+274 files in other folders)
